<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="toolbar_app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_icon_contentDescription">Download icon</string>
    <string name="glide_download_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_download_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="ok">OK</string>
    <string name="file_name_text">File name:</string>
    <string name="status_text">Status:</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_repo_selected">Please select a repository</string>
    <string name="ready_to_download_state">Download</string>
    <string name="downloading_state">We are loading</string>
</resources>
